--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,6 +5,8 @@ $gamaColor3: #4CAF50;
 $gamaColor4: #a7563e;
 $gamaColor5: #f8f6ed; //Header color
 $gamaColor6: #3f51b5; 
+$gamaColor7: #3e7a16;; 
+
 
 $accent-color: #ff6600;
 
