--- a/src/app/layouts/home/joinus-missions/joinus-missions.component.html
+++ b/src/app/layouts/home/joinus-missions/joinus-missions.component.html
@@ -7,11 +7,14 @@
     <div class="container">
 
           <div class="col">
-              <p id="uneteMisionesTitleFirstLine" class="title3">{{ 'HOME.JOIN_MISSION.TITLE_1' | translate }}</p>
+              <!-- <p id="uneteMisionesTitleFirstLine" class="title3">{{ 'HOME.JOIN_MISSION.TITLE_1' | translate }}</p>
               <br>
-              <p id="uneteMisionesTitleSecondLine" class="title3">{{ 'HOME.JOIN_MISSION.TITLE_2' | translate }}</p>
+              <p id="uneteMisionesTitleSecondLine" class="title3">{{ 'HOME.JOIN_MISSION.TITLE_2' | translate }}</p> -->
+              <h1 id="formTitle">{{ 'HOME.JOIN_MISSION.TITLE' | translate }}</h1>
+              <hr>
           </div>
-
+          
+          <br>
           <p id="uneteMisionesDescParagraph" class="text">
               <!-- Ponte en contacto con nosotros si te atrae la idea de participar en <abbr data-toggle="tooltip" title="En colaboración con iglesias locales y JCUM">misiones</abbr>. -->
               {{ 'HOME.JOIN_MISSION.DESCRIPTION' | translate }}.
