--- a/src/app/layouts/home/prevyear-video/prevyear-video.component.html
+++ b/src/app/layouts/home/prevyear-video/prevyear-video.component.html
@@ -56,18 +56,18 @@
 
         <div class="videoTextContainer">
             <div id="verse1" class="verse">
-                <p class="quote">“Go ye into all the world, and preach the gospel to every creature.”</p>
-                <p class="reference">- Mark 16:15 (KJV)</p>
+                <p class="quote">“And He said to them, “Go into all the world and preach the gospel to every creature.”</p>
+                <p class="reference">- Mark 16:15 (NKJV)</p>
             </div>
             <div id="verse2" class="verse">
-                <p class="quote">“Go ye therefore, and teach all nations, baptizing them in the name of the Father, and of the Son, and of the Holy Ghost:  
-                Teaching them to observe all things whatsoever I have commanded you: and, lo, I am with you alway, even unto the end of the world. Amen.”</p>
-                <p class="reference">- Matthew 28:19-20 (KJV)</p>
+                <p class="quote">“Go therefore and make disciples of all the nations, baptizing them in the name of the Father and of the Son and of the Holy Spirit:  
+                Teaching them to observe all things that I have commanded you; and lo, I am with you always, even to the end of the age. Amen.”</p>
+                <p class="reference">- Matthew 28:19-20 (NKJV)</p>
             </div>
             <div id="verse3" class="verse">
-                <p class="quote">“How then shall they call on him in whom they have not believed? and how shall they believe in him of whom they have not heard?  
+                <p class="quote">“How then shall they call on Him in whom they have not believed? And how shall they believe in Him of whom they have not heard?  
                 and how shall they hear without a preacher?”</p>
-                <p class="reference">- Romans 10:14 (KJV)</p>
+                <p class="reference">- Romans 10:14 (NKJV)</p>
             </div>
         </div>
 
