--- a/src/app/layouts/home/tenyears-experience/tenyears-experience.component.scss
+++ b/src/app/layouts/home/tenyears-experience/tenyears-experience.component.scss
@@ -98,7 +98,8 @@
                     }
                     //=========== CELL PHONE SIZE ===========//
                     @media only screen and (max-width: 777px) {
-                        padding-top: 0px;
+                        padding-top: 30px;
+                        padding-bottom: 80px;
                     }
                     
                     #tenYearsRow {
