--- a/src/app/layouts/home/joinus-missions/joinus-missions.component.scss
+++ b/src/app/layouts/home/joinus-missions/joinus-missions.component.scss
@@ -13,33 +13,50 @@
         margin: 0 auto;
         padding: 0;
 
-        #uneteMisionesTitleFirstLine {
-            font-size: 1.3rem;
-            color: #3f51b5;
-            letter-spacing: 4px;
-            margin: 0 auto;
-            padding-bottom: 0px;
-            margin-bottom: 0px;
-            text-align: center;
-        } 
-  
-        #uneteMisionesTitleSecondLine {
-            //=========== NORMAL SCREEN SIZE ===========//
+
+        
+        #formTitle {
+                    
+            //=========== CELL PHONE SIZE ===========//
             @media only screen and (min-width: 1047px) {
-                font-size: 2.9rem;
+                font-size: 2rem;
             }
             //=========== CELL PHONE SIZE ===========//
-            @media only screen and (max-width: 414px) {
-                font-size: 2.6rem;
+            @media only screen and (max-width: 1046px) {
+                font-size: 1.9rem;
             }
-            // font-family: serif !important;
-            color:  var(--bs-dark-rgb);
-            letter-spacing: 6px;
-            margin: 0 auto;
-            padding-bottom: 5px;
-            margin-bottom: 40px;
+            color: #333;
             text-align: center;
-        } 
+            margin-bottom: 20px;
+        }
+
+        // #uneteMisionesTitleFirstLine {
+        //     font-size: 1.3rem;
+        //     color: #3f51b5;
+        //     letter-spacing: 4px;
+        //     margin: 0 auto;
+        //     padding-bottom: 5px;
+        //     margin-bottom: 0px;
+        //     text-align: center;
+        // } 
+  
+        // #uneteMisionesTitleSecondLine {
+        //     //=========== NORMAL SCREEN SIZE ===========//
+        //     @media only screen and (min-width: 1047px) {
+        //         font-size: 2.9rem;
+        //     }
+        //     //=========== CELL PHONE SIZE ===========//
+        //     @media only screen and (max-width: 414px) {
+        //         font-size: 2.4rem;
+        //     }
+        //     // font-family: serif !important;
+        //     color:  var(--bs-dark-rgb);
+        //     letter-spacing: 6px;
+        //     margin: 0 auto;
+        //     padding-bottom: 5px;
+        //     margin-bottom: 40px;
+        //     text-align: center;
+        // } 
 
         #uneteMisionesDescParagraph {
           text-align: center;
