--- a/src/app/layouts/home/mission-info/mission-info.component.scss
+++ b/src/app/layouts/home/mission-info/mission-info.component.scss
@@ -22,6 +22,39 @@
     }
 
 
+    #uneteMisionesTitleFirstLine {
+        font-size: 1.3rem;
+        color: #3f51b5;
+        letter-spacing: 4px;
+        margin: 0 auto;
+        padding-bottom: 0px;
+        margin-bottom: 0px;
+        text-align: center;
+    } 
+
+    #uneteMisionesTitleSecondLine {
+        //=========== NORMAL SCREEN SIZE ===========//
+        @media only screen and (min-width: 1047px) {
+            font-size: 2.9rem;
+        }
+        //=========== CELL PHONE SIZE ===========//
+        @media only screen and (max-width: 1046px) {
+            font-size: 2.9rem;
+        }
+        //=========== CELL PHONE SIZE ===========//
+        @media only screen and (max-width: 414px) {
+            font-size: 2.6rem;
+        }
+        // font-family: serif !important;
+        color:  var(--bs-dark-rgb);
+        letter-spacing: 6px;
+        margin: 0 auto;
+        padding-bottom: 5px;
+        margin-bottom: 10px;
+        text-align: center;
+    } 
+
+
     .missionInfoRow {
 
             display: flex;
@@ -32,7 +65,6 @@
             align-items: center;
             margin: 0 auto;
             padding: 0;
-
 
 
             .missionInfoContainer {
@@ -97,20 +129,21 @@
                 //     font-weight: bold;
                 // }
 
-                .title {
+
+                // .title {
                     
-                    //=========== CELL PHONE SIZE ===========//
-                    @media only screen and (min-width: 1047px) {
-                        font-size: 2rem;
-                    }
-                    //=========== CELL PHONE SIZE ===========//
-                    @media only screen and (max-width: 1046px) {
-                        font-size: 1.9rem;
-                    }
-                    color: #333;
-                    text-align: center;
-                    margin-bottom: 20px;
-                }
+                //     //=========== CELL PHONE SIZE ===========//
+                //     @media only screen and (min-width: 1047px) {
+                //         font-size: 1.9rem;
+                //     }
+                //     //=========== CELL PHONE SIZE ===========//
+                //     @media only screen and (max-width: 1046px) {
+                //         font-size: 1.8rem;
+                //     }
+                //     color: #333;
+                //     text-align: center;
+                //     margin-bottom: 20px;
+                // }
                   
                 .subtitle {
                     
@@ -131,11 +164,11 @@
                     
                     //=========== CELL PHONE SIZE ===========//
                     @media only screen and (min-width: 1047px) {
-                        font-size: 1.1rem;
+                        font-size: 1rem;
                     }
                     //=========== CELL PHONE SIZE ===========//
                     @media only screen and (max-width: 1046px) {
-                        font-size: 1rem;
+                        font-size: 0.9rem;
                     }
                     color: #444;
                 }
@@ -144,11 +177,11 @@
                     
                     //=========== CELL PHONE SIZE ===========//
                     @media only screen and (min-width: 1047px) {
-                        font-size: 1.1rem;
+                        font-size: 1rem;
                     }
                     //=========== CELL PHONE SIZE ===========//
                     @media only screen and (max-width: 1046px) {
-                        font-size: 1rem;
+                        font-size: 0.9rem;
                     }
                     color: #666;
                     margin: 20px 0;
@@ -190,11 +223,13 @@
                         margin-bottom: 10px;
                     
                         a {
-                            color: #007bff;
+                            // color: #007bff;
+                            color: black;
                             text-decoration: none;
                     
                             &:hover {
                                 text-decoration: underline;
+                                color: #007bff;
                             }
                         }
                     }
