--- a/src/app/layouts/home/prevyear-video/prevyear-video.component.scss
+++ b/src/app/layouts/home/prevyear-video/prevyear-video.component.scss
@@ -17,7 +17,7 @@
     }
     //=========== CELL PHONE SIZE ===========//
     @media only screen and (max-width: 414px) {
-        padding: 80px 15px;
+        padding: 80px 15px 35px 15px;
     }
 
     .videoRow {
