--- a/src/app/layouts/home/team/team.component.scss
+++ b/src/app/layouts/home/team/team.component.scss
@@ -26,7 +26,12 @@
     }
     //=========== CELL PHONE SIZE ===========//
     @media only screen and (max-width: 414px) {
-        padding: 70px 10px 0px 10px;
+        padding: 70px 30px 0px 30px;
+        // padding-top: 40px;
+    }
+    //=========== CELL PHONE SIZE ===========//
+    @media only screen and (max-width: 378px) {
+        padding: 70px 25px 0px 25px;
         // padding-top: 40px;
     }
     
@@ -81,7 +86,7 @@
                 padding: 0px 30px;
             }
             //=========== CELL PHONE SIZE ===========//
-            @media only screen and (max-width: 378px) {
+            @media only screen and (max-width: 414px) {
                 // width: 90%;
                 padding: 0px 0px;
             }
