--- a/src/app/layouts/home/joinus-missions/joinus-missions.component.scss
+++ b/src/app/layouts/home/joinus-missions/joinus-missions.component.scss
@@ -1,4 +1,5 @@
 
+@import '../../../../styles/_variables.scss';
 
   
 #uneteMisiones {
@@ -25,7 +26,14 @@
             @media only screen and (max-width: 1046px) {
                 font-size: 1.9rem;
             }
-            color: #333;
+            //=========== CELL PHONE SIZE ===========//
+            @media only screen and (max-width: 375px) {
+                font-size: 1.9rem;
+            }
+            // color: #333;
+            // color: #6e6e6e;
+            color: black;
+            // color: $gamaColor6;
             text-align: center;
             margin-bottom: 20px;
         }
