--- a/src/app/layouts/home/prevyear-video/prevyear-video.component.html
+++ b/src/app/layouts/home/prevyear-video/prevyear-video.component.html
@@ -66,7 +66,7 @@
             </div>
             <div id="verse3" class="verse">
                 <p class="quote">“How then shall they call on Him in whom they have not believed? And how shall they believe in Him of whom they have not heard?  
-                and how shall they hear without a preacher?”</p>
+                And how shall they hear without a preacher?”</p>
                 <p class="reference">- Romans 10:14 (NKJV)</p>
             </div>
         </div>
