--- a/src/app/layouts/home/columns/columns.component.scss
+++ b/src/app/layouts/home/columns/columns.component.scss
@@ -30,15 +30,17 @@
             .imageContainer {
 
                 width: 100%;
-                max-width: 340px;
                 padding: 0;
                 //=========== NORMAL SCREEN SIZE ===========//
                 @media only screen and (min-width: 1047px) {
+                    max-width: 340px;
                     margin-left: 20px;
                     margin-right: 20px;
                 }
                 //=========== CELL PHONE SIZE ===========//
                 @media only screen and (max-width: 1046px) {
+                    max-width: 340px;
+                    min-width: 340px;
                     margin-left: 0px;
                     margin-right: 0px;
                     padding-left: 20px;
@@ -48,9 +50,13 @@
                     // padding-left: 0px;
                     // padding-right: 0px;
                 // }
-                @media only screen and (max-width: 376px) {
-                    padding-left: 20px;
-                    padding-right: 20px;
+                @media only screen and (max-width: 414px) {
+                    max-width: 310px;
+                    min-width: 310px;   
+                    min-height: 440px;   
+                    max-height: 440px;   
+                    // padding-left: 20px;
+                    // padding-right: 20px;
                 }
                 margin-bottom: 60px;
 
