Creacion Redes Sociales.

--- a/src/app/layouts/home/home.component.html
+++ b/src/app/layouts/home/home.component.html
@@ -87,6 +87,12 @@
 
 
   <!--======================================== -->
+  <!--============= SOCIAL MEDIA ============= -->
+  <!--======================================== -->
+  <app-links></app-links>
+
+
+  <!--======================================== -->
   <!--================ FOOTER ================ -->
   <!--======================================== -->
   <footer class="text-end">
