--- a/src/app/layouts/home/links/links.component.html
+++ b/src/app/layouts/home/links/links.component.html
@@ -1,1 +1,60 @@
-<p>links works!</p>
+<section id="socialMediaSection" class="socialsContainer">
+
+    <div class="socialWrapper">
+
+        <div class="socialsColumn">
+            <h2>{{ 'HOME.SOCIAL_MEDIA.TITLE1' | translate }}</h2>
+            <ul>
+                <li>
+                    <img src="./assets/icons/youtube.svg" alt="YouTube" width="24" height="24" />
+                    <!-- <mat-icon color="red">ondemand_video</mat-icon> -->
+                    <a href="https://www.youtube.com/@TourUnidosPorEuropa" target="_blank">YouTube</a>
+                </li>
+                <li>
+                    <img src="./assets/icons/instagram.svg" alt="Instagram" width="24" height="24" />
+                    <!-- <mat-icon color="purple">camera_alt</mat-icon> -->
+                    <a href="https://www.instagram.com/tour_unidos_por_europa/" target="_blank">Instagram</a>
+                </li>
+                <li>
+                    <img src="assets/icons/facebook.svg" alt="Facebook" width="24" height="24" />
+                    <!-- <mat-icon color="blue">facebook</mat-icon> -->
+                    <a href="https://www.facebook.com/profile.php?id=61555382671466" target="_blank">Facebook</a>
+                </li>
+                <li>
+                    <img src="assets/icons/tiktok.svg" alt="TikTok" width="24" height="24" />
+                    <!-- <mat-icon color="black">music_note</mat-icon> -->
+                    <a href="https://www.tiktok.com/@tour_unidos_por_europa" target="_blank">TikTok</a>
+                </li>
+            </ul>
+        </div>
+    
+        <div class="socialsColumn">
+            <h2>Valerio Andras</h2>
+            <ul>
+                <li>
+                    <img src="./assets/icons/youtube.svg" alt="YouTube" width="24" height="24" />
+                    <a href="https://www.youtube.com/@valerioandras" target="_blank">Youtube</a>
+                </li>
+                <li>
+                    <img src="./assets/icons/instagram.svg" alt="Instagram" width="24" height="24" />
+                    <a href="https://www.instagram.com/valerioandras/" target="_blank">Instagram</a>
+                </li>
+                <li>
+                    <img src="assets/icons/facebook.svg" alt="Facebook" width="24" height="24" />
+                    <a href="https://www.facebook.com/valerio.revival" target="_blank">Avivador Valerio</a>
+                </li>
+                <li>
+                    <img src="assets/icons/facebook.svg" alt="Facebook" width="24" height="24" />
+                    <a href="https://www.facebook.com/avivadorvalerio" target="_blank">Avivador Valerio Andras - Revivalist</a>
+                </li>
+                <li>
+                    <img src="assets/icons/tiktok.svg" alt="TikTok" width="24" height="24" />
+                    <a href="https://www.tiktok.com/@valerioandras" target="_blank">TikTok</a>
+                </li>
+            </ul>
+        </div>
+
+    </div>
+  
+  </section>
+  
