--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,6 +6,7 @@ $gamaColor4: #a7563e;
 $gamaColor5: #f8f6ed; //Header color
 $gamaColor6: #3f51b5; 
 $gamaColor7: #3e7a16;; 
+$gamaColor8: #fcf4f2;; 
 
 
 $accent-color: #ff6600;
